streamlit/terraform_eks/networking.tf
resource "aws_vpc" "main" {
  cidr_block           = local.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name                                          = "${local.project_name}-vpc"
    Environment                                   = local.environment
    "kubernetes.io/cluster/${local.project_name}" = "shared"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

########### Public Subnets ###############
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = element(local.public_subnets_cidr, count.index)
  availability_zone       = element(local.availability_zones, count.index)
  count                   = length(local.public_subnets_cidr)
  map_public_ip_on_launch = true

  tags = {
    Name                                          = "${local.project_name}-public-subnet-${format("%03d", count.index + 1)}",
    Environment                                   = local.environment,
    "kubernetes.io/cluster/${local.project_name}" = "shared"
    "kubernetes.io/role/elb"                      = "1"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route" "public" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.main.id
}

resource "aws_route_table_association" "public" {
  count          = length(local.public_subnets_cidr)
  subnet_id      = element(aws_subnet.public.*.id, count.index)
  route_table_id = aws_route_table.public.id
}


########### Private Subnets ###############
resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = element(local.private_subnet_cidr, count.index)
  availability_zone = element(local.availability_zones, count.index)
  count             = length(local.private_subnet_cidr)

  tags = {
    Name                                          = "${local.project_name}-private-subnet-${format("%03d", count.index + 1)}",
    Environment                                   = local.environment,
    "kubernetes.io/cluster/${local.project_name}" = "shared"
    "kubernetes.io/role/internal-elb"             = "1"
  }
}

resource "aws_eip" "nat" {
  count = length(local.private_subnet_cidr)
  vpc   = true
}

resource "aws_nat_gateway" "main" {
  count         = length(local.private_subnet_cidr)
  allocation_id = element(aws_eip.nat.*.id, count.index)
  subnet_id     = element(aws_subnet.public.*.id, count.index)
  depends_on    = [aws_internet_gateway.main]
}

resource "aws_route_table" "private" {
  count  = length(local.private_subnet_cidr)
  vpc_id = aws_vpc.main.id
}

resource "aws_route" "private" {
  count                  = length(compact(local.private_subnet_cidr))
  route_table_id         = element(aws_route_table.private.*.id, count.index)
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = element(aws_nat_gateway.main.*.id, count.index)
}

resource "aws_route_table_association" "private" {
  count          = length(local.private_subnet_cidr)
  subnet_id      = element(aws_subnet.private.*.id, count.index)
  route_table_id = element(aws_route_table.private.*.id, count.index)
}
